2007-03-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/open-uri.rb: Fix all the infinite loop errors.

2007-02-11  Chad Fowler <chad@chadfowler.com>

	* test/gemutilities.rb: Fix to make Windows tests pass. (Anatol Pomozov)

2007-02-05  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to version 0.9.2
	and made a release.

2007-02-04  Chad Fowler <chad@chadfowler.com>

        * Fixed failing tests (changed from assert_equal to assert_match to 
          deal with ARGV inconsistencies in test vs. production).

2007-02-03  Jim Weirich  <jim@weirichhouse.org>

	* Bumped version to 0.9.1.1.

	* lib/rubygems/gem_open_uri.rb: Added the patched open-uri back
	into the gems software.  Evidently, the 1.8 version of open-uri
	does not handle authenticating proxies with username and password.

	* lib/rubygems/source_info_cache.rb (Gem::cache_data): Added
	rescue block to capture bad file loads.  The original rescue was
	only around the marshal load (bug was probably introduced when the
	file data was preloaded into a string).
	(Gem::set_cache_data): Added set_cache_data to be used during
	testing to avoid reload the cache file over and over.

	* lib/rubygems/gem_commands.rb: Added require for command class so
	that this file can be loaded independently.

	* lib/rubygems/source_index.rb (Gem::SourceIndex::outdated): Minor
	cleanup.

	* test/gemutilities.rb
	(RubyGemTestCase::util_setup_source_info_cache): Minor cleanup

	* test/test_gem_source_info_cache.rb
	(TestGemSourceInfoCache::test_write_cache_user): Switched to using
	set_cache_data here and several other places to avoid rereading
	the cache data over and over again.

2007-02-02  Chad Fowler  <chad@chadfowler.com>

	* lib/rubygems/gem_commands.rb:
	Fixed gem unpack (broken since 0.9.1)

2007-01-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache.rb (Gem::SourceInfoCache#cache_data):
	Read the source_cache in binary mode for mswin.
